# Tungsten

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  linker.ld  rust-toolchain.toml  ver.json
src/tungsten/: .gitignore  Cargo.toml  LICENSE
src/tungsten/src/: bootinfo.rs  errno.rs  font_port.rs  limine_boot.rs  main.rs  syscall.rs  version.rs
src/tungsten/src/ai/: mod.rs  nnet.rs
src/tungsten/src/arch/: mod.rs
src/tungsten/src/arch/x86_64/: apic.rs  idt.rs  mod.rs  syscall.rs
src/tungsten/src/block/: ahci.rs  common.rs  ide.rs  io_sched.rs  mbr.rs  partition.rs  virtio_blk.rs
src/tungsten/src/cgroup/: mod.rs
src/tungsten/src/console/: mod.rs
src/tungsten/src/crypto/: hmac.rs  kdf.rs  mod.rs  sha256.rs
src/tungsten/src/devices/: mod.rs  pci.rs
src/tungsten/src/devices/input/: keycode.rs  layout.rs  ps2.rs
src/tungsten/src/drm/: fbdev.rs  kms.rs  mod.rs
src/tungsten/src/fs/: error.rs  pipe.rs  types.rs
src/tungsten/src/kmod/: symtab.rs  verify.rs
src/tungsten/src/mm/: pmm.rs  vmm.rs
src/tungsten/src/mq/: mod.rs
src/tungsten/src/net/: mod.rs  udp.rs
src/tungsten/src/perf/: pmu.rs
src/tungsten/src/pipe/: mod.rs
src/tungsten/src/power/: mod.rs
src/tungsten/src/proc/: mod.rs
src/tungsten/src/ptrace/: mod.rs
src/tungsten/src/random/: mod.rs
src/tungsten/src/security/: audit.rs  mod.rs
src/tungsten/src/sem/: mod.rs
src/tungsten/src/serial/: mod.rs
src/tungsten/src/service/: app.rs  mod.rs
src/tungsten/src/timer/: mod.rs
src/tungsten/src/virtio/: mod.rs
src/tungsten/src/watchdog/: mod.rs
(+105 files in other folders)
